--- a/app.json
+++ b/app.json
@@ -13,16 +13,11 @@
       "bundleIdentifier": "com.youssef.virtual-trainer"
     },
     "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      },
       "package": "com.youssef.virtual-trainer"
     },
     "web": {
       "bundler": "metro",
-      "output": "static",
-      "favicon": "./assets/images/favicon.png"
+      "output": "static"
     },
     "plugins": [
       "expo-router",
