--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "react-native-webview": "13.12.2",
     "tailwindcss": "^3.4.15",
     "yup": "^1.4.0",
-    "zustand": "^5.0.1"
+    "zustand": "^5.0.1",
+    "expo-video": "~2.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
