--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "test-appwrite": "expo-cli run:web -s test-appwrite.js"
   },
   "jest": {
     "preset": "jest-expo"
@@ -31,9 +32,11 @@
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.4",
+    "expo-video": "~2.0.3",
     "expo-web-browser": "~14.0.1",
     "formik": "^2.4.6",
     "nativewind": "^4.1.23",
+    "node-appwrite": "^15.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.3",
@@ -48,18 +51,19 @@
     "react-native-webview": "13.12.2",
     "tailwindcss": "^3.4.15",
     "yup": "^1.4.0",
-    "zustand": "^5.0.1",
-    "expo-video": "~2.0.3"
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
+    "dotenv": "^16.4.7",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.2",
     "react-test-renderer": "18.3.1",
-    "typescript": "^5.3.3"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.2"
   },
   "private": true
 }
